en/docs/assets/css/theme.css
/* ... */
.md-main .md-sidebar.md-sidebar--secondary {
    -webkit-transition: width 0.2s linear;
    -khtml-transition: width 0.2s linear;
    -moz-transition: width 0.2s linear;
    -ms-transition: width 0.2s linear;
    transition: width 0.2s linear;
    padding-bottom: 80px;
}

.md-main .md-sidebar.md-sidebar--primary {
    padding-bottom: 80px;
}

.md-sidebar[data-md-state=lock] {
    top: 5.9rem;
}

.md-main.hide-toc .md-content {
    margin-right: 35px;
}

.md-main.hide-toc .md-sidebar.md-sidebar--secondary {
    width: 31px;
}

.md-sidebar {
    padding: 1.45rem 0;
}

.md-header {
    height: 2.6rem;
}

.md-header-nav__topic {
    top: 0;
    text-align: left;
}

[data-md-color-primary=deep-orange] .md-header {
    background-color: #ffffff;
    color: #212121;
    border-top: 4px solid #ff7043;
}

.md-header-nav__button.md-logo > img {
    width: 60px;
    margin-top: 3px;
}

.md-header__version-select {
    width: 3.5rem;
}

.md-header__version-select .md-tabs__link.md-tabs__dropdown-link {
    display: inline-block;
    padding: .45rem;
    margin-top: .35rem;
    border-radius: .1rem;
}

.md-header__version-select .mb-tabs__dropdown .mb-tabs__dropdown-content,
.md-header__distribution-select .mb-tabs__dropdown .mb-tabs__dropdown-content {
    background: #e2e2e2;
    opacity: 1;
}

.md-header__version-select .mb-tabs__dropdown .mb-tabs__dropdown-content {
    top: .8rem;
}

@media only screen and (min-width: 76.25em) {
    [data-md-color-primary=deep-orange] .md-tabs {
        background-color: #f5f5f5;
        box-shadow: 0 0 0.2rem rgba(0,0,0,.1), 0 0.2rem 0.4rem rgba(0,0,0,.2);
    }

    .md-main__inner {
        padding-top: 3.5rem;
    }
}

html .md-typeset .superfences-tabs > label{
    color: #ff7043;
    font-weight: normal;
}

html .md-typeset .superfences-tabs > label:hover {
    color: #ff7043;
    font-weight: bold;
}

.md-search__input {
    background-color: #dedede;
}

.md-search__input::placeholder {
    color: #404040;
}

.md-nav-link-wrapper {
    display: block;
    margin-top: .625em;
    transition: color .125s;
    text-overflow: ellipsis;
    cursor: pointer;
    overflow: hidden
}

.md-nav__item--nested > .md-nav-link-wrapper > .md-nav__link {
    display: inline;
}

.md-nav__item--nested > .md-nav-link-wrapper > .md-nav__link:after {
    content: "\E313";
    display: inline-block;
    vertical-align: middle;
}

.md-nav__item--nested .md-nav__toggle:checked ~ .md-nav-link-wrapper > .md-nav__link:after {
    -webkit-transform: rotateX(180deg);
    transform: rotateX(180deg)
}

[data-md-color-primary=deep-orange] .md-nav-link-wrapper a:focus,
[data-md-color-primary=deep-orange] .md-nav-link-wrapper a:hover {
    color: #ff7043;
}

.md-version-select {
    width: 100%;
    height: 2.5rem;
    padding-left: .5rem;
    transition: background-color .25s cubic-bezier(.1, .7, .1, 1), color .25s cubic-bezier(.1, .7, .1, 1);
    background-color: rgba(0, 0, 0, .26);
    color: inherit;
    margin-bottom: 2rem;
    border-radius: .2rem;
}

.md-tabs {
    overflow: visible;
}

.mb-tabs__dropdown {
    position: relative;
}

.md-tabs__dropdown-link:after {
    font-family: Material Icons;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    line-height: 1;
    text-transform: none;
    white-space: nowrap;
    speak: none;
    word-wrap: normal;
    direction: ltr;
    content: "\E313";
    display: inline-block;
    vertical-align: middle;
    margin-left: .2rem;
}

.mb-tabs__dropdown.group-select {
    background-color: #737373;
}

.md-header__version-select {
    overflow: visible;   
}

.mb-tabs__dropdown .mb-tabs__dropdown-content {
    position: absolute;
    left: 0;
    top: 3.5em;
    -webkit-transition: all .2s cubic-bezier(.680, 0, .265, 1);
    transition: all .2s;
    -webkit-transform: scale(0);
    transform: scale(0);
    -webkit-transform-origin: 0 0;
    transform-origin: top left;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .16), 0 2px 8px 0 rgba(0, 0, 0, .12);
    background: #fff;
    font-size: 1.4rem;
    color: #242424;
    padding: 0;
    z-index: 1;
}

.mb-tabs__dropdown .mb-tabs__dropdown-content .md-tabs__item {
    padding: 0;
}

.mb-tabs__dropdown .mb-tabs__dropdown-content li {
    display: block;
    width: 100%;
    opacity: 0;
    transform: translate(-20px, 0);
}

.mb-tabs__dropdown.open .mb-tabs__dropdown-content li {
    display: block;
    transition: all .4s;
    opacity: 1;
    transform: translate(0, 0);
    height: auto;
}

.mb-tabs__dropdown ul li a {
    width: 100%;
    padding: .5rem;
    white-space: pre;
    box-sizing: border-box;
    display: block;
    font-size: .7rem;
    text-transform: capitalize;
}

.mb-tabs__dropdown ul li a:hover {
    background: #ebebeb;
}

.mb-tabs__dropdown.open .mb-tabs__dropdown-content {
    -webkit-transform: scale(1);
    transform: scale(1);
    transition-timing-function: cubic-bezier(.680, 0, .265, 1);
}

.mb-config-catalog {
    display: table;
    width: 100%;
}

.mb-config-catalog .superfences-tabs {
    flex-direction: column;
}

.mb-config-catalog .superfences-tabs .tab-selector {
    text-align: right;
}

.mb-config-catalog .superfences-tabs .tab-selector > .icon {
    margin-right: 5px;
}

.mb-config-catalog .superfences-content {
    flex-direction: column;
    order: 0;
}

.mb-config-catalog .superfences-tabs > input + label:after {
    content: "View Sample";
}

.mb-config-catalog .superfences-tabs > input:checked + label:after {
    content: "Hide Sample";
}

.mb-config-catalog .superfences-tabs .doc-wrapper {
    padding: .525rem;
}

.mb-config-catalog > section {
    display: table-row;
}

.mb-config-catalog > section > .mb-config-options,
.mb-config-catalog > section > .mb-config-example {
    display: table-cell;
    flex-direction: column;
}

.mb-config-catalog > section > .mb-config-example > .example-config-wrap {
    margin-right: 1em;
}

.mb-config-catalog .mb-config > .params-wrap {
    display: table;
    width: 100%;
}
/* ... */

